--- a/templates/results.html
+++ b/templates/results.html
@@ -36,19 +36,9 @@
   <section class="relative bg-[#DC143C] py-20 lg:py-32 text-center">
     <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-white">
       <h2 class="text-5xl font-bold leading-tight mb-6">
-        अब हामी 'क' देखी 'क:' सम्म लेख्न सिक्क्सम        </h2>
-            <h2>क = ka</h2>
-            <h2>का = kaa</h2>
-            <h2>कि = ki</h2>
-            <h2>कु = ku</h2>
-            <h2>के = ke</h2>
-            <h2>कै = kai</h2>
-            <h2>को = ko</h2>
-            <h2>कौ =kau</h2>
-            <h2>कम = kam</h2>
-            <h2>क:  kah</h2> <br>
+        तिमीलाई बधाई छ</h2>
+        <h1>{{points}} आयो</h1>
     </div>
-    <a href="test1"><button style="color: rgb(220, 9, 26); background-color: aliceblue; padding: 2px 10px 2px 10px; border-radius: 5%;">तेस्त </button></a>
   </section>
   <!-- Footer -->
   <footer class="bg-gray-900 text-white py-16">
